# fs-only

./: Cargo.toml  run.sh
.cargo/: config.toml
src/: main.rs
