[package]
name = "fs-only"
version = "0.1.0"
authors = ["decentclock <decentclock.5uh2k@slmail.me>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.31.6", features = ["binstart"] }
bitflags = "1.3.2"


[build-dependencies]
embuild = "0.29"
anyhow = "1"
